# rlwe-bdhk

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: polynomial.cpp.88E17DD23F0CDEBB.idx  polynomial.h.E9BF45D52614168F.idx  polynomial_test.cpp.8D91390E3BB4E681.idx  rlwe.cpp.707C73B7670833E2.idx  rlwe.h.3789E06759C8D494.idx  rlwe_test.cpp.08DA55D0513B69F2.idx
include/: logging.h  polynomial.h  rlwe.h  sha256.h
src/: CMakeLists.txt  polynomial.cpp  rlwe.cpp  sha256.cpp
tests/: CMakeLists.txt  polynomial_test.cpp  rlwe_test.cpp  sha256_test.cpp
